update for loading